[gd_scene load_steps=14 format=3 uid="uid://bmr8kmf05e5e0"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_brsn8"]
[ext_resource type="Texture2D" uid="uid://cij0pnswi74ym" path="res://textures/windup.png" id="2_ilpq7"]
[ext_resource type="Texture2D" uid="uid://cklk6bcawv13y" path="res://textures/slap.png" id="3_ajaeo"]
[ext_resource type="AudioStream" uid="uid://4p8w73702d4a" path="res://sounds/slap.mp3" id="4_vbnls"]
[ext_resource type="Texture2D" uid="uid://c3102lhbi4yyn" path="res://textures/crosshair.png" id="4_xkc8c"]
[ext_resource type="AudioStream" uid="uid://jobg17v4x3b7" path="res://sounds/woosh.mp3" id="5_kppr7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_f1ml6"]
size = Vector3(0.75, 2, 0.75)

[sub_resource type="BoxShape3D" id="BoxShape3D_88ish"]
size = Vector3(0.75, 1, 0.75)

[sub_resource type="SpriteFrames" id="SpriteFrames_np71l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ilpq7")
}, {
"duration": 1.0,
"texture": ExtResource("3_ajaeo")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tivvb"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("freelook_pivot/pivot/camera:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("mesh:scale")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("mesh:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("collision:disabled")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("crouch_collision:disabled")
properties/6/spawn = true
properties/6/replication_mode = 1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yfapq"]
lightmap_size_hint = Vector2i(17, 14)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6svm"]
bg_color = Color(0.190762, 0.190762, 0.190762, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_k7oyl"]
font_size = 32

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("1_brsn8")

[node name="bonk_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 2, 0)

[node name="collision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_f1ml6")

[node name="crouch_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_88ish")
disabled = true

[node name="freelook_pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="pivot" type="Node3D" parent="freelook_pivot"]

[node name="camera" type="Camera3D" parent="freelook_pivot/pivot"]

[node name="slap_sprite" type="AnimatedSprite3D" parent="freelook_pivot/pivot/camera"]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, -0.5, -0.94)
visible = false
offset = Vector2(500, 100)
no_depth_test = true
sprite_frames = SubResource("SpriteFrames_np71l")

[node name="slap_ray" type="RayCast3D" parent="freelook_pivot/pivot/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
target_position = Vector3(0, 0, -1.4)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_tivvb")

[node name="mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_yfapq")

[node name="slap_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_vbnls")
attenuation_model = 3
volume_db = -5.0

[node name="woosh_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_kppr7")

[node name="crosshair" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -36.0
offset_right = 36.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("4_xkc8c")

[node name="pause_menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CanvasLayer" type="CanvasLayer" parent="pause_menu"]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="pause_menu/CanvasLayer"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g6svm")

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="pause_menu/CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "paused"
label_settings = SubResource("LabelSettings_k7oyl")
horizontal_alignment = 1

[node name="disconnect" type="Button" parent="pause_menu/CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Disconnect"

[connection signal="pressed" from="pause_menu/CanvasLayer/PanelContainer/VBoxContainer/disconnect" to="." method="_on_disconnect_pressed"]
